--- a/Application/ResultProcessingMicroservice/src/app/Dockerfile
+++ b/Application/ResultProcessingMicroservice/src/app/Dockerfile
@@ -1,13 +1,13 @@
-FROM python:3.8
+FROM python:2.7
 
 # Create app directory
 WORKDIR /app
 EXPOSE 5000
 
 COPY . /app
-RUN pip --timeout=100 install flask
-RUN pip --timeout=100 install flask-restful
-RUN pip --timeout=100 install requests
+RUN pip install flask
+RUN pip install flask-restful
+RUN pip install requests
 
 ENV FLASK_APP "resultProcessing.py"
 
